--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ngx-translate/core": "^11.0.1",
+    "angular-star-rating": "^4.0.0-beta.3",
     "core-js": "^2.5.4",
+    "css-star-rating": "^1.2.4",
     "firebase": "^5.7.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
